# rocketdb

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.ubuntu  Doxyfile  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
deploy/: README.md
deploy/client/: rdb_client.c
deploy/server/: rdb_server.c
docs/: Architecture.md  BUILD_SCRIPTS.md  CODE-REVIEW-260616.md  CODE_REVIEW_251219_105822.md  CODE_REVIEW_260430_093332.md  CODE_REVIEW_260430_115301.md  CODE_REVIEW_260430_142015.md  CODE_REVIEW_260430_160000.md  CODE_REVIEW_260505_130821.md  CODE_REVIEW_CONSOLIDATED_260517.md  COMMENTS.md  EXAMPLES.md  EXPERT_REVIEW_260430_014849.md  EXPERT_REVIEW_260430_145500.md  FUNCTION-NAMING-REVIEW-260613.md  HAL_REFERENCE.md  PROJECT-REVIEW-260517-160748.md  PROJECT-REVIEW-260525-230807.md  PROJECT-REVIEW-260603-142000.md  PROJECT-REVIEW-260604-000000.md  PROJECT-REVIEW-260604-001500.md  PROJECT-REVIEW-260613-103231.md  README.md  TROUBLESHOOTING.md  W25QXX_GUIDE.md  cloud_deployment.md  flash_lifespan.md  flash_lifespan_calc.csv  gen_calc.py  rocketdb design.md  test_plan.md
docs/RocketKV/: prompt.txt  test_report_20251230_165801.md  test_report_tsdb_20260215_164752.md  test_request.txt
docs/SpecKit/: COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  SUMMARY.md  SpecKit.md  analyze.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
docs/architecture/: ARCHITECTURE.md  COMPARISON.md  Flash Chip Lifespan Evaluation Model.md  HARDWARE-TEST-PLAN-260619.md  INIT-OPTIMIZATION-260616.md  KVDB-REVIEW-260617.md  OFFLINE_ANALYSIS.md  OPTIMIZATION-1-IMPACT-260616.md  RESOURCE-ANALYSIS-260616.md  STORAGE-COMPATIBILITY-260617.md  TEST_PLAN.md  flash_lifespan_calc.csv  flash_lifespan_calc.xlsx  gen_calc.py
docs/decisions/: README.md
docs/guides/: DEPLOYMENT.md
docs/planning/: FIX_PLAN-260616.md  README.md
docs/reports/: CODE-REVIEW-260616.md  DEPLOYMENT-VALIDATION-260616.md  PROJECT-REVIEW-260517-160748.md  PROJECT-REVIEW-260613-161500.md  PROJECT-REVIEW-260616-merged.md  PROJECT-REVIEW-260630-232117.md
docs/reports/RocketKV/: test_report_20251230_165801.md  test_report_20260225_164233.md  test_report_kvdb_20260215_164752.md
docs/reviews/: README.md
examples/: example_kvdb_basic.c  example_kvdb_basic_v2.c  example_tsdb_sensor.c
interface/: rocketdb_interface.h  rocketdb_interface_stm32f4.c  rocketdb_interface_template.c
k8s/: rocketdb.yaml
src/: rocketdb.h  rocketdb_kvdb.c  rocketdb_tsdb.c
test/perf/: Makefile  README.md  perf_baseline.h  perf_benchmark.h  run_benchmark.bat  scenarios.c
test/sim/: README.md  TEST_FRAMEWORK.md  sim_crypto.c  sim_fault.c  sim_flash.c  sim_flash.h  sim_runner.c  sim_trace.c  sim_trace.h  sim_vectors.c  test_example.c  test_fault_injection.c  test_framework.c  test_framework.h  test_integration.c  test_kvdb_basic.c  test_kvdb_cache.c  test_kvdb_stress.c  test_tsdb_basic.c  test_tsdb_stress.c  vector_format.md
tests/perf/: Makefile  README.md  perf_baseline.h  perf_benchmark.h  scenarios.c  simple_test.c
tests/sim/: FAULT_INJECTION.md  README.md  TEST_FRAMEWORK.md  rocketdb.h  sim_crypto.c  sim_dist.c  sim_dist.h  sim_fault.c  sim_fault.h  sim_flash.c  sim_flash.h  sim_trace.c  sim_trace.h  sim_vectors.h  test_example.c  test_fault_injection.c  test_framework.c  test_framework.h  test_integration.c  test_kvdb_basic.c  test_kvdb_cache.c  test_kvdb_stress.c  test_rdbdump_dump.c  test_tsdb_basic.c  test_tsdb_stress.c  vector_format.md
tools/rdbdump/: README.md  rdbdump.py  verify_offline.py
zephyr/: CMakeLists.txt  Kconfig  module.yml  rocketdb_port.c  rocketdb_port.h
